fix: contrast fix

--- a/gamevault_backend/gamevault_backend/static/css/modules/admin.css
+++ b/gamevault_backend/gamevault_backend/static/css/modules/admin.css
@@ -185,7 +185,7 @@
 }
 
 .admin-table thead tr th{
-    color:#ffffff;
+    color: red;
     padding:var(--space-lg) var(--space-xl);
     text-align:left;
     font-weight:var(--font-weight-bold);
